; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wan/extr_cycx_drv.c_cycx_poke.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wan/extr_cycx_drv.c_cycx_poke.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cycx_hw = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @cycx_poke(%struct.cycx_hw* %0, i32 %1, i8* %2, i32 %3) #0 {
  %5 = alloca %struct.cycx_hw*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  store %struct.cycx_hw* %0, %struct.cycx_hw** %5, align 8
  store i32 %1, i32* %6, align 4
  store i8* %2, i8** %7, align 8
  store i32 %3, i32* %8, align 4
  %9 = load i32, i32* %8, align 4
  %10 = icmp eq i32 %9, 1
  br i1 %10, label %11, label %21

11:                                               ; preds = %4
  %12 = load i8*, i8** %7, align 8
  %13 = bitcast i8* %12 to i32*
  %14 = load i32, i32* %13, align 4
  %15 = load %struct.cycx_hw*, %struct.cycx_hw** %5, align 8
  %16 = getelementptr inbounds %struct.cycx_hw, %struct.cycx_hw* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = load i32, i32* %6, align 4
  %19 = add nsw i32 %17, %18
  %20 = call i32 @writeb(i32 %14, i32 %19)
  br label %30

21:                                               ; preds = %4
  %22 = load %struct.cycx_hw*, %struct.cycx_hw** %5, align 8
  %23 = getelementptr inbounds %struct.cycx_hw, %struct.cycx_hw* %22, i32 0, i32 0
  %24 = load i32, i32* %23, align 4
  %25 = load i32, i32* %6, align 4
  %26 = add nsw i32 %24, %25
  %27 = load i8*, i8** %7, align 8
  %28 = load i32, i32* %8, align 4
  %29 = call i32 @memcpy_toio(i32 %26, i8* %27, i32 %28)
  br label %30

30:                                               ; preds = %21, %11
  ret i32 0
}

declare dso_local i32 @writeb(i32, i32) #1

declare dso_local i32 @memcpy_toio(i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
